style.css
/* ... */
.bg-dark {
  background-color: var(--bg-dark);
}
.bg {
  background-color: var(--bg);
}
.text-muted {
  color: var(--text-muted);
}
.text {
  color: var(--text);
}
/* Suppression des marges de page pour l'impression */
@page {
  margin: 0 !important;
  padding: 0 !important;
  size: A4;
}

/* Styles pour l'impression avec @media print natif */
@media print {
  @page {
    margin: 5mm; /* Ou une petite marge de sécurité : 5mm */
    size: A4;
  }

  /* OBLIGATOIRE : Force le navigateur à imprimer les couleurs exactes (fonds sombres inclus) */
  :root {
    -webkit-print-color-adjust: exact !important;
    print-color-adjust: exact !important;
  }

  /* Masquer les éléments non imprimables */
  .no-print { 
    display: none !important; 
  }
  
  /* Réinitialiser html et body pour l'impression */
  html, body {
    margin: 0 !important;
    padding: 0 !important;
    width: 100% !important;
    height: 100% !important;
  }
  
  /* Style du conteneur CV pour l'impression */
  #cv-container {
    width: 100% !important; 
    height: 100% !important;
    /*page-break-inside: avoid;*/
    /* On s'assure que la couleur de fond actuelle est bien appliquée */
    background-color: var(--bg-dark) !important;
        
    /* Double sécurité pour Chrome */
    -webkit-print-color-adjust: exact !important;
    print-color-adjust: exact !important;
  }

  
}

* {
  font-weight: 200;
}



body {
    font-family: 'Montserrat', sans-serif;
    /*font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 3px;
    line-height: 1.6;*/
    margin: 0;
    padding: 18px;
    background-color: hsl(var(--h), var(--s), 50%);
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: flex-start; 
}
body::-webkit-scrollbar {
  display: none;
}

h1 {
  /* Entre 1.5rem (mobile) et 2.5rem (desktop) */
  font-size: x-large;
  font-weight: 600;
  margin: 0;
}
h2 {
  font-size: clamp(1.1rem, 3vw, 1.2rem);
  font-weight: 300;
  margin: 0;
}
h3 { 
  margin: 0; 
  font-size: 14px; 
  font-weight: 500;
}

/* Liste des tâches */
ul { 
  margin: 5px 0 0 10px; 
  padding-left: 12px; 
  border-left: 2px solid #dbeafe; 
  list-style: none; 
}
li { font-size: 12px; color: #4b5563; margin-bottom: 4px; position: relative; }
li::before { /*content: "•";*/ position: absolute; left: -10px; color: #60a5fa; }

p {
  font-size: smaller;
  margin: 4px;
  font-size: 0.7rem;
  /*margin: 9px 9px 9px 73px;*/
  text-align: justify;
}

.svg {
  height: auto;
  width: auto; 
  filter: drop-shadow(0px 4px 4px light-dark(hsla(0, 0%, 0%, 0.15), 
  hsla(0, 0%, 100%, 0.15)))
}
.svg_container_round {
  width: 30px;
  height: 30px;
  border-radius: 50%; 
  background-color: var(--bg); 
  
  display: flex;
  justify-content: center;
  align-items: center;
  
  box-shadow: var(--shadow);
}
.calendrier {
  margin-left: 5px;
  margin-right: 8px;
  width: 1.1em;
}
.suitcase {
  margin: 0px 5px 0px 4px;
}

/* Conteneur A4 */
#cv-container {
  /* clamp(MIN, VALEUR IDÉALE, MAX) */
  /* Min: 320px, Idéal: 95vw, Max: 21cm (A4) */
  width: clamp(389px, 95vw, 21cm);
  
  /* Pour la hauteur, on veut garder le ratio A4 le plus possible */
  /* Mais sur mobile, on laisse le contenu définir la hauteur */
  min-height: clamp(500px, 141.4vw, 29.7cm);
  display: flex;
  flex-direction: column;
  
  margin: 0;
  padding: 0;
  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
}

.cv-layout {
  flex: 1;
  background-color: var(--bg-light);
}

#footer {
  padding: 4px;
  background-color: var(--bg);
  display: flex;
  justify-content: space-between;
  align-items: center;
}
#header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: calc(100% - 20px);
  box-shadow: var(--shadow-bottom);
  height: fit-content;
  padding: 10px;
  background-color:linear-gradient(135deg, var(--bg-dark), var(--bg));
}
#information_list{
  margin-left: auto;
  display: flex;
  flex-direction: column;
}
#information_list > div {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  margin-top: 2px;
  margin-bottom: 2px;
}
#information_list > div > img:first-child {
  margin-right: 4px;
}
#information_list * {
  font-weight: 100;
  font-size: clamp(0.7rem, 2vw, 0.9rem);
}


.card {
  background: var(--gradient);
  padding: 4px;
  margin-top: 7px;
  margin-bottom: 7px;
  border-radius: 6px;
  border: var(--border-card);
  box-shadow: var(--shadow-xl);
}
.card:hover {
  background: var(--gradient-hover);
}
.card_icon_rounded {
  border-radius: 21px 6px 6px 6px;
}
.title_with_icon {
  display: flex;
  align-items: center;
  gap: 4px;
  margin-bottom: 5px;
}
.card.card_icon_rounded > div:first-child > div {
  font-weight: 400;
  font-size: 0.95em;
}
.card_timeline {
  background: var(--gradient);
  padding: 4px;
  margin-top: 7px;
  margin-bottom: 7px;
  border-radius: 6px;
  box-shadow: var(--shadow);
  display: flex;
}
.timeline_card_main_content {
  flex-grow: 1;
}
.card_projets {
  background: var(--gradient);
  margin-top: 10px;
  margin-bottom: 10px;
  border: solid 3px hsl(var(--h) var(--s) 71%);
  box-shadow: var(--shadow);
  border-radius: 21px;
  padding: 8px;
}

.card_projets_header {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
}
.projet_title {
  font-weight: 500;
  font-size: small;
  text-align: left;
  align-self: center;
  margin-right: 8px;
}
.projet_date {
  background-color: hsl(var(--h) var(--s) 72%);
  padding: 3px 8px 3px 8px;
  border-radius: 21px;
  font-size: 0.7em;
  margin: -1px -2px 0px 0px;
}
.projet_description {
   font-size: 0.7em;
   margin-top: 4px;
   text-align: justify;
}
/* ... */

